--- a/Project/.recommenders/caches/identified-project-coordinates.json
+++ b/Project/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_40","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.7"}},"jre:jre:1.7.0"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_40","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.7"}},"jre:jre:1.7.0"],[{"location":"D:\\Documenti\\Svilluppo\\Java\\GIT\\Project\\Chess","type":"PROJECT","hints":{"PROJECT_NAME":"Chess"}},"ABSENT"]]
